<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Running Application</string>

    <!-- Main -->
    <string name="main_button_text_calories">Calculate calories</string>
    <string name="main_button_text_browse">Browse routes</string>
    <string name="main_navigation_item_title_routes">Routes</string>
    <string name="main_navigation_item_title_workouts">Workouts</string>
    <string name="main_navigation_item_title_calories">Calories</string>

    <!-- Routes -->
    <string name="route_browse_toolbar_title">Walking Routes</string>
    <string name="route_view_holder_button_text_description">Description</string>
    <string name="route_view_holder_button_text_location">Location</string>

    <!-- Workouts -->
    <string name="workout_date_details_label">Workout date</string>
    <string name="workout_label_details">Workout label</string>
    <string name="pace_label_details">Pace:</string>
    <string name="workout_distance_label_text">0 km</string>
    <string name="workout_duration_value_label">00:00 min</string>
    <string name="steps_label_details">Steps:</string>
    <string name="more_button">MORE</string>
    <string name="path_details">Path</string>
    <string name="workout_list_toolbar_title">Workouts</string>
    <string name="workout_list_options_menu_title_sort">Sort</string>
    <string name="workout_list_fab_text_start">Start</string>
    <string name="workout_list_fab_text_create">Create</string>
    <string name="workout_create_toolbar_title">New Workout</string>
    <string name="workout_create_edit_text_hint_date">Date</string>
    <string name="workout_create_edit_text_hint_label">Label</string>
    <string name="workout_create_edit_text_hint_distance">Distance</string>
    <string name="workout_create_edit_text_hint_duration">Duration</string>
    <string name="workout_create_edit_text_suffix_distance">km</string>
    <string name="workout_create_edit_text_suffix_duration">min</string>
    <string name="workout_create_button_text_create">Create</string>
    <string name="workout_create_edit_text_error_empty">Field is required</string>
    <string name="workout_create_edit_text_error_format">Wrong format</string>
    <string name="workout_start_button_text_start">Start</string>
    <string name="workout_start_button_text_finish">Finish</string>
    <string name="workout_start_button_text_cancel">Cancel</string>
    <string name="workout_start_button_text_power">Power</string>
    <string-array name="workout_toast_motivation">
        <item>Run longer! :)</item>
        <item>Run faster! :)</item>
    </string-array>
    <string name="workout_notification_channel_name">Workout tracker</string>
    <string name="workout_notification_content_title">Workout</string>
    <string name="workout_notification_content_text">
        Running application is tracking your workout.
    </string>
    <string name="workout_label">Workout</string>

    <!-- Calories -->
    <string name="calories_toolbar_title">Calories Calculator</string>
    <string name="calories_edit_text_hint_weight">Weight</string>
    <string name="calories_edit_text_hint_height">Height</string>
    <string name="calories_edit_text_hint_age">Age</string>
    <string name="calories_radio_button_text_male">Male</string>
    <string name="calories_radio_button_text_female">Female</string>
    <string name="calories_edit_text_hint_duration">Duration</string>
    <string name="calories_button_text_calculate">Calculate</string>
    <string name="calories_edit_text_suffix_weight">kg</string>
    <string name="calories_edit_text_suffix_height">cm</string>
    <string name="calories_edit_text_suffix_age">year</string>
    <string name="calories_edit_text_suffix_duration">min</string>
    <string name="calories_burned">Burned</string>
    <string name="calories_needed">Needed</string>
    <string name="calories_toast_text_error">Wrong values!</string>

    <!-- Login -->
    <string name="welcome_label">Welcome</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="stay_logged_in_text">Stay logged in</string>
    <string name="no_account_question">No account?</string>
    <string name="register_button_text">Register</string>
    <string name="email_hint">E-mail</string>
    <string name="enter_username_password">Enter username and password!</string>
    <string name="username_exists">Username already exists!</string>
    <string name="email_exists">Email already exists!</string>
    <string name="invalid_login_data">Invalid login data!</string>

    <!-- Nav -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout_title">Logout</string>
    <string name="login_title">Login</string>

    <!-- Music -->
    <string name="new_playlist">New Playlist</string>
    <string name="songs_num_suffix">songs</string>
    <string name="playlist_name_hint">Playlist Name</string>
    <string name="playlist_create_button_text">Create</string>
    <string name="playlists_title">Playlists</string>
    <string name="play_button">Play</string>
    <string name="empty_playlist">Playlist: </string>
    <string name="empty_song">Song: </string>
    <string name="pause_button_text">Pause</string>
    <string name="resume_button_text">Resume</string>
    <string name="next_button_text">Next</string>
    <string name="previous_button_text">Previous</string>

    <!-- Steps -->
    <string name="steps_text">Steps: 0</string>
    <string name="workout_list_fab_text_filter">Filter / Sort</string>
    <string name="done_button_text">Done</string>

    <!-- Filters and sorting -->
    <string name="sort_workouts_question">Sort workouts ?</string>
    <string name="filter_by_distance_question">Filter by distance:</string>
    <string name="low_filter">Low</string>
    <string name="high_filter">High</string>
    <string name="no_filter_sort_label">Filter off / Sort off</string>

    <!-- Alarm -->
    <string name="new_alarm_toolbar_title">New Alarm</string>
    <string name="Alarm">Alarm</string>


    <!-- Stats -->
    <string name="challenges_title">Challenges</string>
    <string name="stats_title">Stats</string>
    <string name="number_of_workouts_prefix">\Number of workouts: </string>
    <string name="total_steps_prefix">Total steps: </string>
    <string name="longest_distance_prefix">Longest distance: </string>
    <string name="average_duration_prefix">Average duration: </string>
    <string name="statistics_fab_title">Statistics</string>

</resources>