<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@id/nav_graph_login"
            android:icon="@drawable/baseline_terrain_black_48"
            android:visible="false"
            android:title="@string/login_title" />

        <item android:id="@id/nav_graph_routes"
            android:icon="@drawable/baseline_terrain_black_48"
            android:title="@string/main_navigation_item_title_routes" />

        <item android:id="@id/nav_graph_workouts"
            android:icon="@drawable/baseline_bar_chart_black_48"
            android:title="@string/main_navigation_item_title_workouts" />

        <item android:id="@id/nav_graph_calories"
            android:icon="@drawable/baseline_directions_run_black_48"
            android:title="@string/main_navigation_item_title_calories" />

        <item android:id="@id/nav_graph_playlists"
            android:icon="@drawable/ic_baseline_audiotrack_48"
            android:title="@string/playlists_title" />

        <item android:id="@id/nav_graph_alarm"
            android:icon="@drawable/ic_baseline_access_alarm_48"
            android:title="@string/Alarm" />

    </group>

    <item android:title="@string/logout_title">
        <menu>
            <item android:id="@+id/nav_drawer_logout"
                android:title="@string/logout_title"/>
        </menu>
    </item>

</menu>