<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workouts.WorkoutStartFragment">

    <TextView
        android:id="@+id/workout_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="00:00:00.00"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:27:13.84" />

    <Button
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/workout_start_button_text_start"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"
        app:layout_constraintTop_toBottomOf="@id/workout_duration" />

    <Button
        android:id="@+id/finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:enabled="false"
        android:text="@string/workout_start_button_text_finish"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"
        app:layout_constraintTop_toBottomOf="@id/start" />

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/workout_start_button_text_cancel"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"
        app:layout_constraintTop_toBottomOf="@id/finish" />

    <TextView
        android:id="@+id/playlist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_playlist"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cancel"
        app:layout_constraintBottom_toTopOf="@id/song_name"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_song"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/playlist_name"
        app:layout_constraintBottom_toTopOf="@id/remaining"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"/>

    <TextView
        android:id="@+id/remaining"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/song_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"/>

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_button_text"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/workout_duration"
        app:layout_constraintTop_toBottomOf="@id/remaining"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintEnd_toStartOf="@id/resume"/>

    <Button
        android:id="@+id/resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_button_text"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@id/pause"
        app:layout_constraintTop_toBottomOf="@id/remaining"
        app:layout_constraintBottom_toTopOf="@id/previous"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button_text"
        android:layout_marginBottom="170dp"
        app:layout_constraintStart_toStartOf="@id/pause"
        app:layout_constraintTop_toBottomOf="@id/pause"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_button_text"
        android:layout_marginBottom="170dp"
        app:layout_constraintStart_toStartOf="@id/resume"
        app:layout_constraintTop_toBottomOf="@id/resume"
        app:layout_constraintEnd_toEndOf="@id/resume"/>

    <TextView
        android:id="@+id/steps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/steps_text"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"/>

</androidx.constraintlayout.widget.ConstraintLayout>