<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/MaterialEditText.MaterialEditTextConstraintable"
            android:layout_marginStart="@dimen/new_horizontal_margin"
            android:layout_marginEnd="@dimen/new_horizontal_margin"
            android:hint="@string/username_hint"
            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/MaterialEditText.MaterialEditTextConstraintable"
            android:hint="@string/password_hint"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintLeft_toLeftOf="@id/username"
            app:layout_constraintRight_toRightOf="@id/username"
            app:layout_constraintTop_toBottomOf="@id/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/stay_logged_in_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintRight_toLeftOf="@id/stay_logged_in_text"
            app:layout_constraintStart_toStartOf="@id/password" />

        <TextView
            android:id="@+id/stay_logged_in_text"
            android:text="@string/stay_logged_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintLeft_toRightOf="@id/stay_logged_in_checkbox" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stay_logged_in_checkbox" />

        <TextView
            android:id="@+id/no_account_question"
            android:text="@string/no_account_question"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintLeft_toRightOf="@id/stay_logged_in_checkbox" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/MaterialEditText.MaterialEditTextConstraintable"
            android:hint="@string/email_hint"
            android:layout_marginStart="@dimen/new_horizontal_margin"
            android:layout_marginEnd="@dimen/new_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/no_account_question"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/username_register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_register"
            style="@style/MaterialEditText.MaterialEditTextConstraintable"
            android:hint="@string/username_hint"
            app:layout_constraintLeft_toLeftOf="@id/email"
            app:layout_constraintRight_toRightOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintBottom_toTopOf="@id/password_register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_register_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_register"
            style="@style/MaterialEditText.MaterialEditTextConstraintable"
            android:hint="@string/password_hint"
            app:layout_constraintLeft_toLeftOf="@id/username_register"
            app:layout_constraintRight_toRightOf="@id/username_register"
            app:layout_constraintTop_toBottomOf="@id/username_register"
            app:layout_constraintBottom_toTopOf="@id/register_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_register_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/register_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_register"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>